k8s/04_service.yml
apiVersion: v1
kind: Service
metadata:
  name: appapi-svc
  namespace: appapi
spec:
  type: ClusterIP
  ports:
  - name: http
    targetPort: 8080
    port: 8080
  selector:
    app: appapi
