k8s/05_ingress.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: appapi-ingressroute
  namespace: appapi

spec:
  entryPoints: 
    - web
  routes: 
  - kind: Rule
    match: PathPrefix(`/appapi`) 
    services:
    - kind: Service
      name: appapi-svc
      port: 8080
